# ppt

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  install.sh  install.sh.template  ppt  pyoxidizer.bzl  pyproject.toml  sandbox.sh
.github/workflows/: ci.yml  release.yml
dev/: Containerfile.dist  Containerfile.sandbox  build_dist.py  packages.toml  ppt-sandbox-launcher.sh  render_install_sh.py  sandbox-cmd.sh
dev/example-packages/: fetch_asset_list.py  packages.txt  report_asset_matrix.py
docs/: design.md
src/ppt/: __main__.py
tests/: conftest.py  test_asset_selection.py  test_cli.py  test_gitlab_ci_schema.py  test_gitlab_support.py  test_install_sh.py  test_template_archive_preference.py  test_template_armv7_hardfloat.py  test_template_checksum_ignored.py  test_template_go_os_arch_assets.py  test_template_libc_preference.py  test_template_linux_any.py  test_template_linux_arch.py  test_template_rust_triple_assets.py  test_yaml_syntax.py
tests/integration/: test_gitlab_ci_lint_api.py  test_install_container.py  test_install_sh.py  test_runtime_deps_pure_python.py
tests/unit/: test_asset_selection_archive_preference.py  test_asset_selection_armv7_hardfloat.py  test_asset_selection_awesome_packages.py  test_asset_selection_checksum_ignored.py  test_asset_selection_env_preference.py  test_asset_selection_go_style_assets.py  test_asset_selection_linux_any.py  test_asset_selection_linux_arch.py  test_asset_selection_macos.py  test_asset_selection_ppt_list_packages.py  test_asset_selection_rejects_unsupported_arch_tokens.py  (+15 more)
