[project]
name = "ppt"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "ruamel.yaml>=0.18",
  "python-dotenv>=1",
  "rich>=13",
]

[dependency-groups]
dev = [
  "pytest",
  "pydantic>=2",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-q"
markers = [
  "container: requires container runtime (integration)",
  "gitlab_api: calls GitLab HTTP APIs (integration)",
]
